--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<link href="_layouts/template.html" rel="import" />
+<!DOCTYPE html>
+<html>
+    <head>
+        <link href="./_layouts/template.html" rel="import" />
+
+    </head>
+    <body>
+          <link href="./_layouts/template.html" rel="import" />
+
+    </body>
+</html>
