--- a/html_snippets/test_automation_product_owner_description.html
+++ b/html_snippets/test_automation_product_owner_description.html
@@ -1,13 +1,39 @@
-<p>My thesis was about designing a steering actuator for our driverless electric race car at BME Formula Racing Team. To achieve this, I went with the traditional waterfall method as it fit into the approach we have followed on vehicle level. This included the following actions:</p>
-<ul>
-	<li>Collecting requirements (regulations and team needs)</li>
-	<li>Benchmarking and literature research</li>
-	<li>Conceptual design creation</li>
-	<li>Calculations to validate the concept</li>
-	<li>Pre-design, choosing off-the-shelf products</li>
-	<li>Structural design creation</li>
-	<li>Manufacturing and ordering products</li>
-	<li>Assembling and testing</li>
-	<li>Suggestions for improvement, summary</li>
+<p>My responsibilities were:</p>
+<ul class="roman">
+	<li>Defining and managing the product vision, roadmap and strategy
+		<ul class="square">
+			<li>Gather the needs of customers and stakeholders</li>
+			<li>Research and analyse the market (understand competitive landscape, emerging trends, and new technologies)</li>
+			<li>Collaborating closely with other teams to ensure that the product meets customer needs and is delivered on time and within budget</li>
+			<li>Ensure that the product backlog items are clearly defined, well understood, and properly estimated (DEEP principle)</li>
+			<li>Support others to share and contribute to the product vision and goals</li>
+		</ul>
+	</li>
+	<li>Creating and prioritizing a product backlog
+		<ul class="square">
+			<li>Continuously refine the product backlog based on feedback and changing business needs</li>
+		</ul>
+	</li>
+	<li>Propose and spread new workflows and frameworks
+		<ul class="square">
+			<li>Explore how we can operate more effectively and smoothly</li>
+			<li>Propose and document workflows to give a good understanding to POs and SMs</li>
+			<li>Hold knowledge transfer sessions to fellow POs</li>
+		</ul>
+	</li>
+	<li>Release internal tools for customers frequently
+		<ul class="square">
+			<li>Ensure that the product is compliant with all relevant regulations and standards (legal and ethical considerations)</li>
+			<li>Make decisions on what features to include in each sprint or release based on their value</li>
+			<li>Hold regular sync session for customers to ensure frequent feedbacks</li>
+			<li>Act as the primary point of contact for all stakeholders</li>
+			<li>Ensure releases are transparent (release notes about content, email to all customers)</li>
+			<li>Continuously monitor the product's performance (data-driven)</li>
+		</ul>
+	</li>
+	<li>Hold and optimise agile ceremonies
+		<ul class="square">
+			<li>Ensure that Sprint Showcases are effective working sessions and have the expected results</li>
+		</ul>
+	</li>
 </ul>
-<p>Please forgive me that they are written only in Hungarian.</p>
