--- a/html_snippets/test_automation_product_owner_description.html
+++ b/html_snippets/test_automation_product_owner_description.html
@@ -1,7 +1,7 @@
 <p>My responsibilities were:</p>
-<ul class="roman">
-	<li>Defining and managing the product vision, roadmap and strategy
-		<ul class="square">
+<ul>
+	<li class="main-responsibility">Defining and managing the product vision, roadmap and strategy
+		<ul>
 			<li>Gather the needs of customers and stakeholders</li>
 			<li>Research and analyse the market (understand competitive landscape, emerging trends, and new technologies)</li>
 			<li>Collaborating closely with other teams to ensure that the product meets customer needs and is delivered on time and within budget</li>
@@ -9,20 +9,20 @@
 			<li>Support others to share and contribute to the product vision and goals</li>
 		</ul>
 	</li>
-	<li>Creating and prioritizing a product backlog
-		<ul class="square">
+	<li class="main-responsibility">Creating and prioritizing a product backlog
+		<ul>
 			<li>Continuously refine the product backlog based on feedback and changing business needs</li>
 		</ul>
 	</li>
-	<li>Propose and spread new workflows and frameworks
-		<ul class="square">
+	<li class="main-responsibility">Propose and spread new workflows and frameworks
+		<ul>
 			<li>Explore how we can operate more effectively and smoothly</li>
 			<li>Propose and document workflows to give a good understanding to POs and SMs</li>
 			<li>Hold knowledge transfer sessions to fellow POs</li>
 		</ul>
 	</li>
-	<li>Release internal tools for customers frequently
-		<ul class="square">
+	<li class="main-responsibility">Release internal tools for customers frequently
+		<ul>
 			<li>Ensure that the product is compliant with all relevant regulations and standards (legal and ethical considerations)</li>
 			<li>Make decisions on what features to include in each sprint or release based on their value</li>
 			<li>Hold regular sync session for customers to ensure frequent feedbacks</li>
@@ -31,8 +31,8 @@
 			<li>Continuously monitor the product's performance (data-driven)</li>
 		</ul>
 	</li>
-	<li>Hold and optimise agile ceremonies
-		<ul class="square">
+	<li class="main-responsibility">Hold and optimise agile ceremonies
+		<ul>
 			<li>Ensure that Sprint Showcases are effective working sessions and have the expected results</li>
 		</ul>
 	</li>
