--- a/html_snippets/test_automation_product_owner_description.html
+++ b/html_snippets/test_automation_product_owner_description.html
@@ -1,4 +1,6 @@
-<p>My responsibilities were:</p>
+<p>I am responsible for building a bridge between the customers and the developers by learning, managing, and prioritizing the needs and requirements of the customers and translating them into actionable items and tasks. Based on their needs, this meant developing in-house web-based tools to enable test automation process and to reduce
+costs for the company by reducing manual working hours.</p>
+<p>My main responsibilities are:</p>
 <ul>
 	<li class="main-responsibility">Defining and managing the product vision, roadmap and strategy
 		<ul>
@@ -36,4 +38,13 @@
 			<li>Ensure that Sprint Showcases are effective working sessions and have the expected results</li>
 		</ul>
 	</li>
+</ul>
+<p>My main achievements so far are:</p>
+<ul>
+	<li>Frequent releases of internal web-based tool</li>
+	<li>Transparent product vision, roadmap and strategy</li>
+	<li>Up-to-date product backlog (as the single source of customer requirements)</li>
+	<li>Scrum events in place</li>
+	<li>Applied workflows within the scrum team</li>
+	<li>Recognitions from Architects, Domain and Group Leaders</li>
 </ul>
