detail elements added

--- a/html_snippets/test_automation_product_owner_description.html
+++ b/html_snippets/test_automation_product_owner_description.html
@@ -1,50 +1,55 @@
 <p>I am responsible for building a bridge between the customers and the developers by learning, managing, and prioritizing the needs and requirements of the customers and translating them into actionable items and tasks. Based on their needs, this meant developing in-house web-based tools to enable test automation process and to reduce
 costs for the company by reducing manual working hours.</p>
-<p>My main responsibilities are:</p>
-<ul>
-	<li class="main-responsibility">Defining and managing the product vision, roadmap and strategy
-		<ul>
-			<li>Gather the needs of customers and stakeholders</li>
-			<li>Research and analyse the market (understand competitive landscape, emerging trends, and new technologies)</li>
-			<li>Collaborating closely with other teams to ensure that the product meets customer needs and is delivered on time and within budget</li>
-			<li>Ensure that the product backlog items are clearly defined, well understood, and properly estimated (DEEP principle)</li>
-			<li>Support others to share and contribute to the product vision and goals</li>
-		</ul>
-	</li>
-	<li class="main-responsibility">Creating and prioritizing a product backlog
-		<ul>
-			<li>Continuously refine the product backlog based on feedback and changing business needs</li>
-		</ul>
-	</li>
-	<li class="main-responsibility">Propose and spread new workflows and frameworks
-		<ul>
-			<li>Explore how we can operate more effectively and smoothly</li>
-			<li>Propose and document workflows to give a good understanding to POs and SMs</li>
-			<li>Hold knowledge transfer sessions to fellow POs</li>
-		</ul>
-	</li>
-	<li class="main-responsibility">Release internal tools for customers frequently
-		<ul>
-			<li>Ensure that the product is compliant with all relevant regulations and standards (legal and ethical considerations)</li>
-			<li>Make decisions on what features to include in each sprint or release based on their value</li>
-			<li>Hold regular sync session for customers to ensure frequent feedbacks</li>
-			<li>Act as the primary point of contact for all stakeholders</li>
-			<li>Ensure releases are transparent (release notes about content, email to all customers)</li>
-			<li>Continuously monitor the product's performance (data-driven)</li>
-		</ul>
-	</li>
-	<li class="main-responsibility">Hold and optimise agile ceremonies
-		<ul>
-			<li>Ensure that Sprint Showcases are effective working sessions and have the expected results</li>
-		</ul>
-	</li>
-</ul>
-<p>My main achievements so far are:</p>
-<ul>
-	<li>Frequent releases of internal web-based tool</li>
-	<li>Transparent product vision, roadmap and strategy</li>
-	<li>Up-to-date product backlog (as the single source of customer requirements)</li>
-	<li>Scrum events in place</li>
-	<li>Applied workflows within the scrum team</li>
-	<li>Recognitions from Architects, Domain and Group Leaders</li>
-</ul>
+<details>
+	<summary>Main responsibilities</summary>
+	<ul>
+		<li class="main-responsibility">Defining and managing the product vision, roadmap and strategy
+			<ul>
+				<li>Gather the needs of customers and stakeholders</li>
+				<li>Research and analyse the market (understand competitive landscape, emerging trends, and new technologies)</li>
+				<li>Collaborating closely with other teams to ensure that the product meets customer needs and is delivered on time and within budget</li>
+				<li>Ensure that the product backlog items are clearly defined, well understood, and properly estimated (DEEP principle)</li>
+				<li>Support others to share and contribute to the product vision and goals</li>
+			</ul>
+		</li>
+		<li class="main-responsibility">Creating and prioritizing a product backlog
+			<ul>
+				<li>Continuously refine the product backlog based on feedback and changing business needs</li>
+				<li>Ensure that the product backlog is kept as the single source of requirements</li>
+			</ul>
+		</li>
+		<li class="main-responsibility">Propose and spread new workflows and frameworks
+			<ul>
+				<li>Explore how we can operate more effectively and smoothly</li>
+				<li>Propose and document workflows to give a good understanding to POs and SMs</li>
+				<li>Hold knowledge transfer sessions to fellow POs</li>
+			</ul>
+		</li>
+		<li class="main-responsibility">Release internal tools for customers frequently
+			<ul>
+				<li>Ensure that the product is compliant with all relevant regulations and standards (legal and ethical considerations)</li>
+				<li>Make decisions on what features to include in each sprint or release based on their value</li>
+				<li>Hold regular sync session for customers to ensure frequent feedbacks</li>
+				<li>Act as the primary point of contact for all stakeholders</li>
+				<li>Ensure releases are transparent (release notes about content, email to all customers)</li>
+				<li>Continuously monitor the product's performance (data-driven)</li>
+			</ul>
+		</li>
+		<li class="main-responsibility">Hold and optimise agile ceremonies
+			<ul>
+				<li>Ensure that Sprint Showcases are effective working sessions and have the expected results</li>
+			</ul>
+		</li>
+	</ul>
+</details>
+<details>
+	<summary>Main achievements</summary>
+	<ul>
+		<li>Frequent releases of internal web-based tool</li>
+		<li>Transparent product vision, roadmap and strategy</li>
+		<li>Up-to-date product backlog</li>
+		<li>Scrum events in place</li>
+		<li>Applied workflows within the scrum team</li>
+		<li>Recognitions from Architects, Domain and Group Leaders</li>
+	</ul>
+</details>
