--- a/html_snippets/test_automation_product_owner_description.html
+++ b/html_snippets/test_automation_product_owner_description.html
@@ -51,5 +51,6 @@ costs for the company by reducing manual working hours.</p>
 		<li>Scrum events in place</li>
 		<li>Applied workflows within the scrum team</li>
 		<li>Recognitions from Architects, Domain and Group Leaders</li>
+		<li>Increased cross-functionality and engagement of scrum team members</li>
 	</ul>
 </details>
