--- a/html_snippets/university_degree_description.html
+++ b/html_snippets/university_degree_description.html
@@ -10,7 +10,7 @@
 	<li>Assembling and testing</li>
 	<li>Suggestions for improvement, summary</li>
 </ul>
-<p>Downloadable links:
+Downloadable links:
 	<div style="display: inline-block;">
 		<a class="cv-download" title="download CV" id="download" href="static/pdfs/thesis.pdf" target="_blank" style="margin-left: 8px;">
 			<svg class="download-icon" width="13" height="16" viewBox="0 0 18 22" fill="none" xmlns="http://www.w3.org/2000/svg"><path class="download-arrow" d="M13 9L9 13M9 13L5 9M9 13V1" stroke-linecap="round" stroke-linejoin="round"></path><path d="M1 17V18C1 18.7956 1.31607 19.5587 1.87868 20.1213C2.44129 20.6839 3.20435 21 4 21H14C14.7956 21 15.5587 20.6839 16.1213 20.1213C16.6839 19.5587 17 18.7956 17 18V17" stroke-linecap="round" stroke-linejoin="round"></path></svg>
@@ -29,6 +29,5 @@
 			<span> Presentation</span>
 		</a>
 	</div>
-</p>
 <p>Please forgive me that they are written only in Hungarian.</p>
 <img src="static/videos/steering_actuator.gif" style="max-width: 100%; max-height: 100%; border-radius: 10px;">
