--- a/html_snippets/test_automation_product_owner_description.html
+++ b/html_snippets/test_automation_product_owner_description.html
@@ -1,7 +1,7 @@
 <p>I am responsible for building a bridge between the customers and the developers by learning, managing, and prioritizing the needs and requirements of the customers and translating them into actionable items and tasks. Based on their needs, this meant developing in-house web-based tools to enable test automation process and to reduce
 costs for the company by reducing manual working hours.</p>
-<details>
-	<summary>Main responsibilities</summary>
+<details class="responsibility-details">
+	<summary class="responsibility-summary">Main responsibilities</summary>
 	<ul>
 		<li class="main-responsibility">Defining and managing the product vision, roadmap and strategy
 			<ul>
@@ -42,8 +42,8 @@ costs for the company by reducing manual working hours.</p>
 		</li>
 	</ul>
 </details>
-<details>
-	<summary>Main achievements</summary>
+<details class="responsibility-details">
+	<summary class="responsibility-summary">Main achievements</summary>
 	<ul>
 		<li>Frequent releases of internal web-based tool</li>
 		<li>Transparent product vision, roadmap and strategy</li>
