all details nicer

--- a/html_snippets/electric_and_driverless_cars_technical_manager_description.html
+++ b/html_snippets/electric_and_driverless_cars_technical_manager_description.html
@@ -1,6 +1,6 @@
 <p>We followed the traditional V-model during this project. We went through the concept, design, manufacturing and assembling phases in order and then we maintained both an electic and an autonomour racecar and participated in international racing events.</p>
-<details>
-	<summary>Main responsibilities</summary>
+<details class="responsibility-details">
+	<summary class="responsibility-summary">Main responsibilities</summary>
 	<ul>
 		<li class="main-responsibility">Develop and improve technical processes and their platforms
 			<ul>
@@ -16,8 +16,8 @@
 		<li class="main-responsibility">Holding the Vehicle Level meeting</li>
 	</ul>
 </details>
-<details>
-	<summary>Main achievements</summary>
+<details class="responsibility-details">
+	<summary class="responsibility-summary">Main achievements</summary>
 	<ul>
 		<li>Newly introduced technical processes (with demonstration and documentation)</li>
 		<li>Racecar finished in time</li>
