--- a/html_snippets/modelling_and_simulation_sw_developer_description.html
+++ b/html_snippets/modelling_and_simulation_sw_developer_description.html
@@ -1,14 +1,14 @@
 <p>The goal was to develop in-house tools for different ADAS/AD simulation environments which can be used by Simulation and Test Definition Engineers.</p>
-<details>
-	<summary>Main responsibilities</summary>
+<details class="responsibility-details">
+	<summary class="responsibility-summary">Main responsibilities</summary>
 	<ul>
 		<li class="main-responsibility">Full stack development of web-based tools using Python in Django framework</li>
 		<li class="main-responsibility">Development and maintanance of several modules in the MATLAB-Simulink system</li>
 		<li class="main-responsibility">Research and development activities on several fields of autonomous driving simulation (MATLAB-Simulink, IPG CarMaker, Unreal Engine, Carla)</li>
 	</ul>
 </details>
-<details>
-	<summary>Main achievements</summary>
+<details class="responsibility-details">
+	<summary class="responsibility-summary">Main achievements</summary>
 	<ul>
 		<li>Frequent releases of the internal web-based tool</li>
 	</ul>
