--- a/html_snippets/vehicle_dynamics_control_group_leader_description.html
+++ b/html_snippets/vehicle_dynamics_control_group_leader_description.html
@@ -1,14 +1,14 @@
 <p>Leading a group that had the purpose to optimize the forces transferred to the ground by developing functionalities in MATLAB-Simulink such as power limiter, slip control and torque vectoring.</p>
-<details>
-	<summary>Main responsibilities</summary>
+<details class="responsibility-details">
+	<summary class="responsibility-summary">Main responsibilities</summary>
 	<ul>
 		<li class="main-responsibility">Developing a software that is defining the force needs due to desired trajectory in MATLAB/Simulink</li>
 		<li class="main-responsibility">Optimization of forces transferring to the ground</li>
 		<li class="main-responsibility">Being in the test & race crew</li>
 	</ul>
 </details>
-<details>
-	<summary>Main achievements</summary>
+<details class="responsibility-details">
+	<summary class="responsibility-summary">Main achievements</summary>
 	<ul>
 		<li>Vehicle Dynamics Control developed in MATLAB-Simulink environment (instead of earlier, C+ based approach)</li>
 		<li>Participation on international competitions (with the new Vehicle Dynamics Control on the racecar)</li>
