--- a/html_snippets/electric_and_driverless_cars_chief_engineer_description.html
+++ b/html_snippets/electric_and_driverless_cars_chief_engineer_description.html
@@ -1,6 +1,6 @@
 <p>We followed the traditional V-model during this project. We went through the concept, design, manufacturing and assembling phases in order and then we maintained both an electic and an autonomour racecar and participated in international racing events.</p>
-<details>
-	<summary>Main responsibilities</summary>
+<details class="responsibility-details">
+	<summary class="responsibility-summary">Main responsibilities</summary>
 	<ul>
 		<li class="main-responsibility">Ensure that every component of the car has the best possible design</li>
 		<li class="main-responsibility">Ensure that all interfaces between parts are resolved</li>
@@ -10,8 +10,8 @@
 		<li class="main-responsibility">Determination and implementation of the design method into the team's life</li>
 	</ul>
 </details>
-<details>
-	<summary>Main achievements</summary>
+<details class="responsibility-details">
+	<summary class="responsibility-summary">Main achievements</summary>
 	<ul>
 		<li>Racecar finished in time</li>
 		<li>Participation on international competitions</li>
