list items formatted

--- a/html_snippets/electric_and_driverless_cars_technical_manager_description.html
+++ b/html_snippets/electric_and_driverless_cars_technical_manager_description.html
@@ -19,9 +19,9 @@
 <details class="responsibility-details">
 	<summary class="responsibility-summary">Main achievements</summary>
 	<ul>
-		<li>Newly introduced technical processes (with demonstration and documentation)</li>
-		<li>Racecar finished in time</li>
-		<li>Participation on international competitions</li>
-		<li>Designed, manufactured and assembled steering actuator (as my thesis)</li>
+		<li class="main-responsibility">Newly introduced technical processes (with demonstration and documentation)</li>
+		<li class="main-responsibility">Racecar finished in time</li>
+		<li class="main-responsibility">Participation on international competitions</li>
+		<li class="main-responsibility">Designed, manufactured and assembled steering actuator (as my thesis)</li>
 	</ul>
 </details>
