--- a/html_snippets/modelling_and_simulation_sw_developer_description.html
+++ b/html_snippets/modelling_and_simulation_sw_developer_description.html
@@ -10,6 +10,6 @@
 <details class="responsibility-details">
 	<summary class="responsibility-summary">Main achievements</summary>
 	<ul>
-		<li>Frequent releases of the internal web-based tool</li>
+		<li class="main-responsibility">Frequent releases of the internal web-based tool</li>
 	</ul>
 </details>
