--- a/html_snippets/test_automation_product_owner_description.html
+++ b/html_snippets/test_automation_product_owner_description.html
@@ -45,12 +45,12 @@ costs for the company by reducing manual working hours.</p>
 <details class="responsibility-details">
 	<summary class="responsibility-summary">Main achievements</summary>
 	<ul>
-		<li>Frequent releases of internal web-based tool</li>
-		<li>Transparent product vision, roadmap and strategy</li>
-		<li>Up-to-date product backlog</li>
-		<li>Scrum events in place</li>
-		<li>Applied workflows within the scrum team</li>
-		<li>Recognitions from Architects, Domain and Group Leaders</li>
-		<li>Increased cross-functionality and engagement of scrum team members</li>
+		<li class="main-responsibility">Frequent releases of internal web-based tool</li>
+		<li class="main-responsibility">Transparent product vision, roadmap and strategy</li>
+		<li class="main-responsibility">Up-to-date product backlog</li>
+		<li class="main-responsibility">Scrum events in place</li>
+		<li class="main-responsibility">Applied workflows within the scrum team</li>
+		<li class="main-responsibility">Recognitions from Architects, Domain and Group Leaders</li>
+		<li class="main-responsibility">Increased cross-functionality and engagement of scrum team members</li>
 	</ul>
 </details>
