--- a/html_snippets/vehicle_dynamics_control_group_leader_description.html
+++ b/html_snippets/vehicle_dynamics_control_group_leader_description.html
@@ -10,7 +10,7 @@
 <details class="responsibility-details">
 	<summary class="responsibility-summary">Main achievements</summary>
 	<ul>
-		<li>Vehicle Dynamics Control developed in MATLAB-Simulink environment (instead of earlier, C+ based approach)</li>
-		<li>Participation on international competitions (with the new Vehicle Dynamics Control on the racecar)</li>
+		<li class="main-responsibility">Vehicle Dynamics Control developed in MATLAB-Simulink environment (instead of earlier, C+ based approach)</li>
+		<li class="main-responsibility">Participation on international competitions (with the new Vehicle Dynamics Control on the racecar)</li>
 	</ul>
 </details>
