--- a/html_snippets/electric_and_driverless_cars_chief_engineer_description.html
+++ b/html_snippets/electric_and_driverless_cars_chief_engineer_description.html
@@ -13,7 +13,7 @@
 <details class="responsibility-details">
 	<summary class="responsibility-summary">Main achievements</summary>
 	<ul>
-		<li>Racecar finished in time</li>
-		<li>Participation on international competitions</li>
+		<li class="main-responsibility">Racecar finished in time</li>
+		<li class="main-responsibility">Participation on international competitions</li>
 	</ul>
 </details>
